--- a/src/components/Details/details.scss
+++ b/src/components/Details/details.scss
@@ -103,7 +103,6 @@
     &_results {
       position: relative;
       width: 100%;
-      padding: 0 31px;
 
       &__table {
         position: relative;
@@ -119,7 +118,7 @@
             display: flex;
             flex: 1;
             flex-direction: column;
-            min-width: 55px;
+            width: 55px;
             padding: 19px 16px;
           }
         }
@@ -134,7 +133,7 @@
             display: flex;
             flex: 1;
             flex-direction: column;
-            min-width: 55px;
+            width: 55px;
 
             @include tableHeader(16px);
           }
@@ -225,6 +224,7 @@
       display: flex;
       flex: 1;
       flex-direction: column;
+      padding: 10px 0 10px 21px;
 
       .inputs_container {
         width: 100%;
@@ -236,7 +236,7 @@
         z-index: 3;
         margin: 16px;
         padding: 0;
-        background: none;
+        background: $white;
         border: none;
         outline: none;
         cursor: pointer;
@@ -244,6 +244,17 @@
 
       .json {
         padding: 0 15px;
+      }
+
+      .preview-table {
+        display: flex;
+        flex: 1;
+        flex-direction: column;
+        overflow: auto;
+
+        .table-header {
+          top: 0;
+        }
       }
     }
 
